# ic20

./: .gitignore
ic20-ex01/: CMakeLists.txt  Makefile
ic20-ex01/input/: house.ppm  mini.pgm
ic20-ex01/src/: heap.c  heap.h  ic20_huffman.c
ic20-ex02/: Makefile  mini-debug.txt  mini_reference.txt
ic20-ex02/src/: bfio.c  ic20_adaptive_arithmetic.c
ic20-ex03/: Makefile  ic20_quantisation.c
ic20-ex03/tests/kmeans/: lenna_kmeans_100_quantised.ppm  lenna_kmeans_10_quantised.ppm  lenna_kmeans_16_quantised.ppm  lenna_kmeans_20_quantised.ppm  lenna_kmeans_255_quantised.ppm  lenna_kmeans_2_quantised.ppm  lenna_kmeans_4_quantised.ppm  lenna_kmeans_50_quantised.ppm  lenna_kmeans_8_quantised.ppm
ic20-ex03/tests/uniform/: lenna_uniform_100_quantised.ppm  lenna_uniform_10_quantised.ppm  lenna_uniform_20_quantised.ppm  lenna_uniform_255_quantised.ppm  lenna_uniform_2_quantised.ppm  lenna_uniform_4_quantised.ppm  lenna_uniform_50_quantised.ppm
ic20-ex04/: Makefile  convert_images.sh  run.sh  run_s.sh
ic20-ex04/kodak_test/: all.txt  data.ods  q.txt  ratio_plot copy.py  ratio_plot.py  s.txt  s_no_q.txt  s_q1.txt  sq_plot.py
ic20-ex04/kodak_test/all/: kodim23_jpeg_s128_q1.wnc  kodim23_jpeg_s128_q128.wnc  kodim23_jpeg_s128_q128_dct_channel1.pgm  (+287 more)
ic20-ex04/lena_test/: lena_mini_jpeg.wnc  lena_mini_jpeg_dct_channel0.pgm  lena_mini_jpeg_dct_channel1.pgm  lena_mini_jpeg_dct_channel2.pgm  lena_mini_jpeg_rec.ppm
ic20-ex04/src/: ic20_jpeg_light.c
ic20-ex05/: Makefile  all.txt  homogeneous_inpainting.c  inpainting  mask_generator  mask_generator.c  test.sh
(+157 files in other folders)
